# amazon-orders-mcp

./: .gitignore  README.md  cookie_capture.py  login_setup.py  pyproject.toml
docs/: 2026-04-10-code-review.md
src/amazon_orders_mcp/: __init__.py  client.py  secure_session.py  serialize.py  server.py
tests/: test_client.py  test_serialize.py  test_server.py
