[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-orders-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for Amazon.com personal order history and transactions"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sean Oliver" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "mcp[cli]>=1.0.0",
    "amazon-orders==4.0.*",
    "keyring>=24.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "playwright>=1.58.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/seanoliver/amazon-orders-mcp"
Repository = "https://github.com/seanoliver/amazon-orders-mcp"
Issues = "https://github.com/seanoliver/amazon-orders-mcp/issues"

[project.scripts]
amazon-orders-mcp = "amazon_orders_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
